--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <h1 class="headerText">Simple Omelette Recipe</h1>
     <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-    <div>
-        <h2>Preparation time</h2>  
+    <div class="inner-div">
+        <h2 >Preparation time</h2>  
         <ul>
           <li><strong>Total: </strong>Approximately 10 minutes</li>
           <li><strong>Preparation: </strong>5 minutes</li>
@@ -52,27 +52,43 @@
       <h1>Nutrition</h1>
       <p>The table below shows nutritional values per serving without the additional fillings.
       </p>
-      <table>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>2</td>
-          </tr>
+      <table class="table">
+        <tbody class="table-body">
           <tr>
             <td>Calories</td>
-            <td>277kcal</td>
+            <td><span class="spn-tex">277kcal</span></td>
+            <td></td>
           </tr>
+        </tbody>
+      </table>
+      
+       <hr/>
+
+      <table class="table">
+        <tbody class="table-body">
           <tr>
             <td>Carbs</td>
-            <td>0g</td>
+            <td><span class="spn-tex">0g</span></td>
           </tr>
+        </tbody>
+      </table> 
+       <hr/>
+      <table class="table">
+        <tbody class="table-body">
           <tr>
             <td>Protein</td>
-            <td>20g</td>
+            <td><span class="spn-tex">20g</span></td>
           </tr>
+        </tbody>
+        </table>
+
+        <hr/>
+
+          <table class="table">
+            <tbody class="table-body">
           <tr>
             <td>Fat</td>
-            <td>22g</td>
+            <td><span class="spn-tex">22g</span></td>
           </tr>
         </tbody>
       </table>
