css table edited

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-  <div class="main-div">
-   <div class="container">
+  <div class="main-div" >
+   <div class="container" >
     <div class="image-div" >
       <img class="image-sty"  src="./assets/images/image-omelette.jpeg" alt="img"/>
     </div>
@@ -52,55 +52,45 @@
       <h1>Nutrition</h1>
       <p>The table below shows nutritional values per serving without the additional fillings.
       </p>
-      <table class="table">
-        <tbody class="table-body">
-          <tr>
-            <td>Calories</td>
-            <td><span class="spn-tex">277kcal</span></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-div">
+        <div class="t-body-div">
+            <p>Calories</p>
+        </div>
+        <div class="t-body-div">
+          <p><span class="spn-tex">277kcal</span></p>
+      </div>
+      </div>
+      <hr/>
+      <div class="table-div">
+        <div class="t-body-div">
+            <p>Carbs</p>
+        </div>
+        <div class="t-body-div">
+          <p><span class="spn-tex">0g</span></p>
+      </div>
+      </div>
+      <hr/>
+      <div class="table-div">
+        <div class="t-body-div">
+            <p>Protein</p>
+        </div>
+        <div class="t-body-div">
+          <p><span class="spn-tex">20g</span></p>
+      </div>
+      </div>
+      <hr/>
+      <div class="table-div">
+        <div class="t-body-div">
+            <p>Fat</p>
+        </div>
+        <div class="t-body-div">
+          <p><span class="spn-tex">22g</span></p>
+      </div>
+      </div>
       
-       <hr/>
-
-      <table class="table">
-        <tbody class="table-body">
-          <tr>
-            <td>Carbs</td>
-            <td><span class="spn-tex">0g</span></td>
-          </tr>
-        </tbody>
-      </table> 
-       <hr/>
-      <table class="table">
-        <tbody class="table-body">
-          <tr>
-            <td>Protein</td>
-            <td><span class="spn-tex">20g</span></td>
-          </tr>
-        </tbody>
-        </table>
-
-        <hr/>
-
-          <table class="table">
-            <tbody class="table-body">
-          <tr>
-            <td>Fat</td>
-            <td><span class="spn-tex">22g</span></td>
-          </tr>
-        </tbody>
-      </table>
+     
    </div>
   </div>
  
-<!--
-  
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
